[gd_scene load_steps=7 format=3 uid="uid://dgky2u6gsbic2"]

[ext_resource type="Script" path="res://inventory_item.gd" id="1_d65jf"]
[ext_resource type="Resource" uid="uid://defhgda6tnv8i" path="res://player_info.tres" id="2_rdwvo"]
[ext_resource type="Theme" uid="uid://nh2gs2ko17dl" path="res://Themes/main_theme.tres" id="3_1oy8g"]
[ext_resource type="Texture2D" uid="uid://cjessqii26b4f" path="res://UIElements/empty_UI.png" id="3_op4jg"]
[ext_resource type="Texture2D" uid="uid://c3tn2pppny76b" path="res://Themes/nine_color_rect_icon.png" id="4_rvcoy"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8a7kw"]
texture = ExtResource("4_rvcoy")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0
expand_margin_left = 20.0

[node name="Item" type="Button"]
custom_minimum_size = Vector2(0, 20)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1002.0
offset_bottom = -652.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_d65jf")
player_info = ExtResource("2_rdwvo")

[node name="ItemName" type="Label" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_1oy8g")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxTexture_8a7kw")
text = "Empty"
vertical_alignment = 1
autowrap_mode = 3

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 17.0
offset_bottom = 17.0
texture = ExtResource("3_op4jg")

[connection signal="pressed" from="." to="." method="_on_pressed"]
